namespaces/live.cloud-platform.service.justice.gov.uk/parliamentary-questions-development/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: parliamentary-questions-development
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/application: "Parliamentary Questions Tracker"
    cloud-platform.justice.gov.uk/owner: "Central Digital Product Team: central-digital-product-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/parliamentary-questions"
    cloud-platform.justice.gov.uk/slack-channel: "cdpt-central-digital-product-team"
